--- a/src/output.css
+++ b/src/output.css
@@ -175,6 +175,9 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-end {
+    justify-content: flex-end;
+  }
 }
 html {
   font-size: 14px;
@@ -226,6 +229,65 @@ html {
 .blbl-topbar-right a {
   flex-direction: column;
   align-items: center;
+}
+.blbl-combine {
+  width: 1617px;
+  height: 120px;
+  margin: 0 auto;
+}
+.blbl-combine .popular {
+  height: 120px;
+}
+.popular img {
+  width: 46px;
+  height: 46px;
+  border-radius: 100%;
+}
+.popular-items {
+  height: 72px;
+  width: 46px;
+  margin-right: 26px;
+}
+.blbl-category .channel {
+  width: 1200px;
+  height: 74px;
+  padding-right: 30px;
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+  gap: 10px;
+  border-right: 1px solid #E3E5E7;
+}
+.blbl-category .channel-box {
+  width: 90px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  background-color: #F1F2F3;
+  color: #61666D;
+}
+.blbl-combine .minor-category {
+  height: 74px;
+  width: 258px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(2,1fr);
+  column-gap: 0;
+  row-gap: 10px;
+}
+.minor-category .minor-category-box {
+  height: 32px;
+  width: 78px;
+}
+.minor-category .bigger {
+  height: 32px;
+  width: 102px;
+}
+.minor-category-box svg {
+  width: 20px;
+  height: 20px;
+  margin-right: 4px;
 }
 @property --tw-rotate-x {
   syntax: "*";
