--- a/src/output.css
+++ b/src/output.css
@@ -248,8 +248,8 @@ html {
   width: 46px;
   margin-right: 26px;
 }
-.blbl-category .channel {
-  width: 1200px;
+.blbl-combine .channel {
+  width: 1230px;
   height: 74px;
   padding-right: 30px;
   display: grid;
@@ -257,8 +257,8 @@ html {
   gap: 10px;
   border-right: 1px solid #E3E5E7;
 }
-.blbl-category .channel-box {
-  width: 90px;
+.blbl-combine .channel-box {
+  width: 88px;
   height: 32px;
   display: flex;
   justify-content: center;
