--- a/src/output.css
+++ b/src/output.css
@@ -183,7 +183,7 @@ html {
   font-size: 14px;
 }
 .main-container {
-  width: 1920px;
+  width: 100%;
   height: 10000px;
   border-radius: 5px;
 }
@@ -244,16 +244,19 @@ html {
   border-radius: 100%;
 }
 .popular-items {
+  display: flex;
   height: 72px;
   width: 46px;
   margin-right: 26px;
+  flex-direction: column;
+  align-items: center;
 }
 .blbl-combine .channel {
   width: 1230px;
   height: 74px;
   padding-right: 30px;
   display: grid;
-  grid-template-columns: repeat(12,1fr);
+  grid-template-columns: repeat(12, 1fr);
   gap: 10px;
   border-right: 1px solid #E3E5E7;
 }
@@ -272,7 +275,7 @@ html {
   width: 258px;
   display: grid;
   grid-auto-flow: column;
-  grid-template-rows: repeat(2,1fr);
+  grid-template-rows: repeat(2, 1fr);
   column-gap: 0;
   row-gap: 10px;
 }
@@ -288,6 +291,27 @@ html {
   width: 20px;
   height: 20px;
   margin-right: 4px;
+}
+.blbl-main {
+  width: 1617px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 240px 240px 300px 300px 300px;
+  gap: 20px;
+}
+.blbl-main .test {
+  background-color: pink;
+  height: 240px;
+}
+.blbl-main .lunbo {
+  background-color: pink;
+  height: 500px;
+  grid-area: 1/1/3/3;
+}
+.blbl-main .blbl-vedio {
+  height: 300px;
+  background-color: skyblue;
 }
 @property --tw-rotate-x {
   syntax: "*";
