--- a/src/output.css
+++ b/src/output.css
@@ -7,10 +7,16 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-50: oklch(98.7% 0.022 95.277);
+    --color-amber-700: oklch(55.5% 0.163 48.998);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --spacing: 0.25rem;
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
     --radius-md: 0.375rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -164,8 +170,8 @@
   }
 }
 @layer utilities {
-  .mr-5 {
-    margin-right: calc(var(--spacing) * 5);
+  .mr-2 {
+    margin-right: calc(var(--spacing) * 2);
   }
   .flex {
     display: flex;
@@ -173,17 +179,14 @@
   .grid {
     display: grid;
   }
-  .table {
-    display: table;
-  }
-  .h-5 {
-    height: calc(var(--spacing) * 5);
+  .h-3 {
+    height: calc(var(--spacing) * 3);
   }
   .h-\[28px\] {
     height: 28px;
   }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
+  .w-3 {
+    width: calc(var(--spacing) * 3);
   }
   .w-\[28px\] {
     width: 28px;
@@ -191,14 +194,8 @@
   .w-\[68px\] {
     width: 68px;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .resize {
-    resize: both;
   }
   .items-center {
     align-items: center;
@@ -212,8 +209,8 @@
   .justify-end {
     justify-content: flex-end;
   }
-  .rounded-\[20px\] {
-    border-radius: 20px;
+  .rounded-\[8px\] {
+    border-radius: 8px;
   }
   .rounded-md {
     border-radius: var(--radius-md);
@@ -222,9 +219,8 @@
     border-top-left-radius: var(--radius-md);
     border-top-right-radius: var(--radius-md);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
+  .bg-amber-700 {
+    background-color: var(--color-amber-700);
   }
   .bg-gray-500 {
     background-color: var(--color-gray-500);
@@ -235,12 +231,23 @@
   .p-\[8px\] {
     padding: 8px;
   }
-  .underline {
-    text-decoration-line: underline;
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
+  .pt-5 {
+    padding-top: calc(var(--spacing) * 5);
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .text-amber-50 {
+    color: var(--color-amber-50);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
 }
 html {
@@ -368,18 +375,17 @@ html {
   gap: 20px;
 }
 .blbl-main .test {
-  background-color: pink;
   height: 240px;
   border-radius: 6px;
 }
 .blbl-main .lunbo {
-  background-color: pink;
   height: 500px;
   grid-area: 1/1/3/3;
   border-radius: 6px;
 }
 .lunbo .image-container {
   width: 100%;
+  transition: all .8s;
 }
 .image-container img {
   height: 400px;
@@ -402,6 +408,9 @@ html {
 .vediohead a:hover {
   color: rgb(72, 174, 241);
 }
+.dot-active {
+  background-color: white;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -422,16 +431,6 @@ html {
   syntax: "*";
   inherits: false;
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -440,8 +439,6 @@ html {
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
-      --tw-border-style: solid;
-      --tw-outline-style: solid;
     }
   }
 }
