--- a/src/output.css
+++ b/src/output.css
@@ -11,6 +11,7 @@
     --color-amber-700: oklch(55.5% 0.163 48.998);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
+    --color-white: #fff;
     --spacing: 0.25rem;
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
@@ -170,8 +171,35 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .fixed {
+    position: fixed;
+  }
+  .relative {
+    position: relative;
+  }
+  .sticky {
+    position: sticky;
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
+  .top-\[81px\] {
+    top: 81px;
+  }
+  .-left-24 {
+    left: calc(var(--spacing) * -24);
+  }
+  .z-30 {
+    z-index: 30;
+  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
+  }
+  .block {
+    display: block;
   }
   .flex {
     display: flex;
@@ -179,11 +207,17 @@
   .grid {
     display: grid;
   }
+  .table {
+    display: table;
+  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
   .h-\[28px\] {
     height: 28px;
+  }
+  .h-\[295px\] {
+    height: 295px;
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
@@ -194,8 +228,17 @@
   .w-\[68px\] {
     width: 68px;
   }
+  .w-\[424px\] {
+    width: 424px;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .resize {
+    resize: both;
   }
   .items-center {
     align-items: center;
@@ -209,6 +252,9 @@
   .justify-end {
     justify-content: flex-end;
   }
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .rounded-\[8px\] {
     border-radius: 8px;
   }
@@ -219,6 +265,17 @@
     border-top-left-radius: var(--radius-md);
     border-top-right-radius: var(--radius-md);
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-white {
+    border-color: var(--color-white);
+  }
   .bg-amber-700 {
     background-color: var(--color-amber-700);
   }
@@ -227,6 +284,9 @@
   }
   .bg-gray-600 {
     background-color: var(--color-gray-600);
+  }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
   }
   .p-\[8px\] {
     padding: 8px;
@@ -243,6 +303,13 @@
   }
   .text-amber-50 {
     color: var(--color-amber-50);
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -411,6 +478,9 @@ html {
 .dot-active {
   background-color: white;
 }
+.game:hover .gamehover {
+  display: block !important;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -431,6 +501,16 @@ html {
   syntax: "*";
   inherits: false;
 }
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -439,6 +519,8 @@ html {
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
+      --tw-border-style: solid;
+      --tw-outline-style: solid;
     }
   }
 }
