--- a/src/input.css
+++ b/src/input.css
@@ -18,6 +18,7 @@ html {
 }
 
 .blbl-topbar {
+    width: 100%;
     height: 64px;
     padding: 0 24px;
     color: white;
@@ -221,4 +222,10 @@ html {
 .game:hover .gamehover{
     display: block !important;
     /* 要使用important覆盖内联样式 */
+}
+.my-head:hover {
+    transform: scale(2) translate(-10px,20px);
+    
+    transition: all .5s;
+    
 }
