--- a/src/input.css
+++ b/src/input.css
@@ -31,30 +31,23 @@ html {
 }
 
 .blbl-topbar li {
-    padding: 30px 0;
+    /* padding: 30px 0; */
 }
 
 
-.blbl-topbar-search {
-    width: 500px;
-    height: 40px;
-    background-color: rgb(221, 224, 231);
-    border-radius: 8px;
-    color: rgb(113, 118, 124);
-    padding: 0 5px;
-}
+
 
 .blbl-topbar-search form {
     width: 500px;
     height: 40px;
 }
 
-.blbl-topbar-search input {
+/* .blbl-topbar-search input {
     width: 380px;
     height: 32px;
     margin-right: 10px;
     outline: none;
-}
+} */
 
 
 .blbl-topbar-search button {
@@ -231,5 +224,7 @@ html {
     /* 150 */
 }
 .my-head:hover .my-xinxi {
+
     display: block !important;
+    
 }
