--- a/src/output.css
+++ b/src/output.css
@@ -10,6 +10,7 @@
     --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-amber-700: oklch(55.5% 0.163 48.998);
+    --color-pink-400: oklch(71.8% 0.202 349.761);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-white: #fff;
@@ -181,11 +182,29 @@
   .relative {
     position: relative;
   }
+  .top-\[0px\] {
+    top: 0px;
+  }
+  .top-\[6px\] {
+    top: 6px;
+  }
+  .top-\[40px\] {
+    top: 40px;
+  }
+  .top-\[50px\] {
+    top: 50px;
+  }
+  .top-\[60px\] {
+    top: 60px;
+  }
   .top-\[75px\] {
     top: 75px;
   }
   .top-\[81px\] {
     top: 81px;
+  }
+  .top-\[540px\] {
+    top: 540px;
   }
   .-left-24 {
     left: calc(var(--spacing) * -24);
@@ -208,6 +227,9 @@
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
+  .mr-2\.5 {
+    margin-right: calc(var(--spacing) * 2.5);
+  }
   .block {
     display: block;
   }
@@ -217,11 +239,38 @@
   .grid {
     display: grid;
   }
+  .table {
+    display: table;
+  }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
+  }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
+  .h-\[4\] {
+    height: 4;
+  }
   .h-\[28px\] {
     height: 28px;
+  }
+  .h-\[34px\] {
+    height: 34px;
+  }
+  .h-\[40\] {
+    height: 40;
+  }
+  .h-\[40p\] {
+    height: 40p;
+  }
+  .h-\[40px\] {
+    height: 40px;
   }
   .h-\[295px\] {
     height: 295px;
@@ -235,11 +284,26 @@
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
+  .w-110 {
+    width: calc(var(--spacing) * 110);
+  }
+  .w-\[5\] {
+    width: 5;
+  }
   .w-\[28px\] {
     width: 28px;
   }
+  .w-\[40px\] {
+    width: 40px;
+  }
+  .w-\[50\] {
+    width: 50;
+  }
   .w-\[68px\] {
     width: 68px;
+  }
+  .w-\[90px\] {
+    width: 90px;
   }
   .w-\[300px\] {
     width: 300px;
@@ -247,8 +311,26 @@
   .w-\[424px\] {
     width: 424px;
   }
+  .w-\[450px\] {
+    width: 450px;
+  }
+  .w-\[500\] {
+    width: 500;
+  }
+  .w-\[500p\] {
+    width: 500p;
+  }
+  .w-\[500px\] {
+    width: 500px;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .resize {
+    resize: both;
   }
   .items-center {
     align-items: center;
@@ -264,6 +346,9 @@
   }
   .overflow-hidden {
     overflow: hidden;
+  }
+  .rounded {
+    border-radius: 0.25rem;
   }
   .rounded-\[8px\] {
     border-radius: 8px;
@@ -282,15 +367,33 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-1 {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-2 {
     border-style: var(--tw-border-style);
     border-width: 2px;
+  }
+  .border-\[1\] {
+    border-style: var(--tw-border-style);
+    border-width: 1;
+  }
+  .border-\[1px\] {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-\[\#E3E5E7\] {
+    border-color: #E3E5E7;
   }
   .border-gray-500 {
     border-color: var(--color-gray-500);
   }
   .border-white {
     border-color: var(--color-white);
+  }
+  .bg-\[\#F1F2F3\] {
+    background-color: #F1F2F3;
   }
   .bg-amber-200 {
     background-color: var(--color-amber-200);
@@ -304,11 +407,23 @@
   .bg-gray-600 {
     background-color: var(--color-gray-600);
   }
+  .bg-pink-400 {
+    background-color: var(--color-pink-400);
+  }
+  .bg-white {
+    background-color: var(--color-white);
+  }
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
+  .p-\[5px\] {
+    padding: 5px;
+  }
   .p-\[8px\] {
     padding: 8px;
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -329,8 +444,22 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .text-\[\#61666D\] {
+    color: #61666D;
+  }
   .text-amber-50 {
     color: var(--color-amber-50);
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
+  .outline-0 {
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -360,26 +489,9 @@ html {
 .blbl-topbar a {
   margin: 0 20px 0 0;
 }
-.blbl-topbar li {
-  padding: 30px 0;
-}
-.blbl-topbar-search {
-  width: 500px;
-  height: 40px;
-  background-color: rgb(221, 224, 231);
-  border-radius: 8px;
-  color: rgb(113, 118, 124);
-  padding: 0 5px;
-}
 .blbl-topbar-search form {
   width: 500px;
   height: 40px;
-}
-.blbl-topbar-search input {
-  width: 380px;
-  height: 32px;
-  margin-right: 10px;
-  outline: none;
 }
 .blbl-topbar-search button {
   width: 32px;
@@ -535,6 +647,11 @@ html {
   inherits: false;
   initial-value: solid;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -544,6 +661,7 @@ html {
       --tw-skew-x: initial;
       --tw-skew-y: initial;
       --tw-border-style: solid;
+      --tw-outline-style: solid;
     }
   }
 }
