--- a/src/input.css
+++ b/src/input.css
@@ -26,12 +26,15 @@ html {
 
 
 
-.blbl-topbar a {
+.blbl-topbar-left a {
+    margin: 0 20px 0 0;
+}
+.blbl-topbar-right a {
     margin: 0 20px 0 0;
 }
 
 .blbl-topbar li {
-    /* padding: 30px 0; */
+    padding: 30px 0;
 }
 
 
@@ -42,12 +45,7 @@ html {
     height: 40px;
 }
 
-/* .blbl-topbar-search input {
-    width: 380px;
-    height: 32px;
-    margin-right: 10px;
-    outline: none;
-} */
+
 
 
 .blbl-topbar-search button {
