--- a/src/input.css
+++ b/src/input.css
@@ -4,27 +4,13 @@ html {
     font-size: 14px;
 }
 
-.main-container {
-    width: 100%;
-    /* height: 10000px; */
-    border-radius: 5px;
-}
+
 
 .blbl-header {
-    width: 100%;
-    height: 180px;
+    
     background-image: url(../img/blbl法喜寺2.jpg);
-    background-color: pink;
+    
 }
-
-.blbl-topbar {
-    width: 100%;
-    height: 64px;
-    padding: 0 24px;
-    color: white;
-}
-
-
 
 .blbl-topbar-left a {
     margin: 0 20px 0 0;
@@ -38,21 +24,6 @@ html {
 }
 
 
-
-
-.blbl-topbar-search form {
-    width: 500px;
-    height: 40px;
-}
-
-
-
-
-.blbl-topbar-search button {
-    width: 32px;
-    height: 32px;
-}
-
 .blbl-topbar-right a {
 
     flex-direction: column;
@@ -60,83 +31,54 @@ html {
     /* 巧计 */
 }
 
-.blbl-combine {
-    width: 1617px;
-    height: 120px;
-    margin: 0 auto;
-    /* border: 1px solid pink; */
-}
 
 .blbl-combine .popular {
-    height: 120px;
+    /* height: 120px; */
     /* align-items: center; */
     /* 你这个伸缩项目得有高度，才能用这个啊 */
 }
 
 
 
-.popular img {
-    width: 46px;
-    height: 46px;
-    /* border: 1px solid black; */
-    border-radius: 100%;
-}
+
 
 .popular-items {
-    display: flex;
+    /* display: flex;
     height: 72px;
     width: 46px;
     margin-right: 26px;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
 }
 
 .blbl-combine .channel {
-    width: 1230px;
+    /* width: 1230px;
     height: 74px;
     padding-right: 30px;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 10px;
-    border-right: 1px solid #E3E5E7;
+    border-right: 1px solid #E3E5E7; */
 }
 
-.blbl-combine .channel-box {
-    width: 88px;
-    height: 32px;
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    background-color: #F1F2F3;
-    color: #61666D;
-}
+
 .blbl-combine .channel-box:hover {
     color: #18191C;
     background-color: #E3E5E7;
 }
 
-.blbl-combine .minor-category {
-    height: 74px;
-    width: 258px;
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-rows: repeat(2, 1fr);
-    column-gap: 0;
-    row-gap: 10px;
-}
+
 
 .minor-category .minor-category-box {
     height: 32px;
     width: 78px;
-    /* padding-left: 20px; */
+    
+}
+.minor-category .bigger{
+    /* height: 32px;
+    width: 102px; */
 }
 
-.minor-category .bigger {
-    height: 32px;
-    width: 102px;
-}
 
 .minor-category-box svg {
     width: 20px;
@@ -144,34 +86,10 @@ html {
     margin-right: 4px;
 }
 
-.blbl-main {
-    width: 1617px;
-    /* height: 2000px; */
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 240px 240px 300px 300px ;
-    gap: 20px;
-    /* grid-auto-rows:240px 240px 300px 300px 300px; */
-    /* grid-auto-flow: dense; */
 
-}
-.blbl-main img {
-    
-    /* border-radius: 6px; */
-}
-.blbl-main .test{
-    /* background-color: pink; */
-    height: 240px;
-    border-radius: 6px;
-}
 
 .blbl-main .lunbo {
-    /* background-image: url(../img/法喜寺1.jpg); */
-    /* background-color: pink; */
-    height: 500px;
     grid-area: 1/1/3/3;
-    border-radius: 6px;
 }
 
 .lunbo .image-container {
@@ -188,7 +106,7 @@ html {
 
 .blbl-main .blbl-vedio {
     height: 300px;
-    /* background-color: skyblue; */
+    
     border-radius: 6px;
     padding: 30px 0 20px 0;
 
@@ -226,3 +144,4 @@ html {
     display: block !important;
     
 }
+
